# AgenticAIPlatform10

./: .gitignore  Enterprise Agentic AI Platform..pages  EnterpriseAgenticAIPlatform.key  README.md  manus.lm.pages  platform10_memory.db  pyproject.toml  replay_private_key.pem  replay_public_key.pem  requirements.txt  run.sh
data/: test_fraud_case.json
data/agent_traces/: 4f94aa92-a1bc-4886-ad8a-962e76276570.json  5bd436e0-c52f-49c6-9472-3275ca18daea.json
data/traces/agents/: d0b84ef3-ec47-4645-bba0-6c29de433395.json
data/traces/audit/: FRAUD-TRIAGE-001.jsonl  INFRA-OPS-001.jsonl  TEST-EXEC-001.jsonl
data/traces/workflows/: d2203087-8745-434d-a246-c482228c26ee.json
examples/fintech/: case.json  case_clear.json  case_flag.json  case_review.json
replay_logs/: 82ff838c-4c6c-4a1c-8fc9-df6fb1f673fd.json
src/: cli.py  main.py
src/agenticai_platform10.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/api/: fraud_api.py
src/cli.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/distributed_runtime/: README.md  __init__.py  ray_executor.py  ray_parallel.py  ray_workflow.py
src/platform10/: cli.py
src/platform10/_dev/: conditional_routing_test.py  parallel_fanout_test.py  pipeline_sanity_test.py  ray_parallel_fanout_example.py  retry_pipeline_test.py  runtime_sanity_test.py  test_p01.py
src/tracing/: agent_trace.py  confidence_aggregator.py  trace_store.py  workflow_trace.py
src/workflows/: fraud_triage_workflow.py
tests/: conftest.py
tests/workflows/: test_executor.py  test_fraud_triage.py  test_vendor_onboarding.py
(+64 files in other folders)
