[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticai-platform10"
version = "0.1.0"
description = "Enterprise-grade Agentic AI Platform"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
addopts = "-ra -q"
